# kernel-checkpoint-extension

./: .copier-answers.yml  .gitignore  .prettierignore  4  CLAUDE.md  LICENSE  README.md  RELEASE.md  cursor_jupyterlab_extension_for_checkpo.md  install.json  package.json  pyproject.toml
.claude/: README.md
.claude/changelogs/: 2026-07-03.md
.github/workflows/: build.yml  check-release.yml
jupyter-config/jupyter_server_config.d/: kernel_checkpoint.json
jupyter-notebook-image/: Dockerfile
kernel_checkpoint/: Untitled.ipynb  __init__.py  handlers.py
src/: api.ts  checkpoint-panel.tsx  index.ts  restore-collision.ts  restore-handler.ts  types.ts
src/__tests__/: kernel_checkpoint.spec.ts  restore-collision.spec.ts
style/: base.css
ui-tests/: package.json
ui-tests/tests/: kernel_checkpoint.spec.ts
